--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -566,6 +566,8 @@
                     \chemfig{*6(=--=--)}
                     \arrow{0}[,0.5]
                     \chemfig{*6(-=(*6(----=))----)}
+                    \arrow{0}[,0.5]
+                    \chemfig{[:-120]*6((-[:-30]Me)=-=(-[:30]Me))}
                 \schemestop
                 \caption{Non-viable dienes.}
                 \label{fig:dieneStructureb}
@@ -577,7 +579,6 @@
             \item How much of the time the diene is in the s-cis orientation affects the reaction rate.
             \item For example, the diene on the left in Figure \ref{fig:dieneStructurea} is in the s-cis orientation 100\% of the time, but the diene on the right in Figure \ref{fig:dieneStructurea} is in the s-cis orientation only 50\% of the time.
             \item The dienes in Figure \ref{fig:dieneStructureb}, for one reason or another, are never capable of achieving the s-cis orientation.
-            \item Note that sterics can also prevent or hinder a molecule from achieving the s-cis orientation.
         \end{itemize}
         \item The diene and dienophile must be properly activated electronically.
         \begin{itemize}
@@ -641,7 +642,7 @@
     \item \textbf{S-cis}: Alkenes are cis relative to the sigma bond.
     \item \textbf{S-trans}: Alkenes are trans relative to the sigma bond.
     \item The Diels-Alder reaction is \textbf{stereospecific}.
-    \begin{figure}[h!]
+    \begin{figure}[H]
         \centering
         \footnotesize
         \begin{subfigure}[b]{\linewidth}
@@ -861,6 +862,35 @@
     \begin{itemize}
         \item Yes.
     \end{itemize}
+\end{itemize}
+
+
+
+\section{Review}
+\begin{itemize}
+    \item \marginnote{2/1:}Esters bonded to the diene/dienophile through their single oxygen will be donor groups, but worse than groups like \ce{OMe}.
+    \begin{itemize}
+        \item This is because they \emph{can} push electrons toward the diene/dienophile, but they also have the option to withdraw electrons through resonance.
+    \end{itemize}
+    \item Substituents that aren't on the double bond count as alkyl groups. Their inductive effect will vary based on other groups further down the chain, but they will have no resonance effects.
+    \item When you have two groups on the diene in the "B" position, the diene will \emph{never} be viable.
+    \item He is going to ask us to use the reactions from last quarter, but not know the mechanisms.
+    \begin{itemize}
+        \item Write "magic powder" over your arrow if you forget the reagents.
+        \item Alkene reactions to know: hydrogenation (\ce{H2} \ce{Pd}/\ce{C}), dihydroxylation (\ce{OsO4}), ozonolysis (\ce{O3} DMSO), hydrobromination (\ce{HBr}), and bromination (\ce{Br2}).
+    \end{itemize}
+    \item We use both \ce{KO^{$t$}Bu} and \ce{{}^{$t$}BuOH} to establish a buffer, an equilibrium that will allow us to both grab and release a proton.
+    \begin{itemize}
+        \item This is not so important for E2 chemistry, but is important for other chemistry.
+    \end{itemize}
+    \item MS: para-dimethylbenzene vs. ethylbenzene.
+    \begin{itemize}
+        \item For para-dimethylbenzene, we can only lose one methyl group (losing the other would lead to a $2+$ ion, which we will not observe). This gives a $m/z=91$ peak.
+        \item For ethylbenzene, we can lose just a methyl radical \emph{or} the entire ethyl chain. This gives a $m/z=91$ \emph{and} a $m/z=77$ peak.
+        \item Rule: If you have ortho/meta/para substituents, you can lose \emph{at most one} substituent at a time.
+    \end{itemize}
+    \item For \ce{{}^13C} NMR, he's not above giving us cyclobutane with a ketone attached.
+    \item If you need to form \ce{C-C} bonds, that's probably going to be Diels-Alder for this exam.
 \end{itemize}
 
 
