--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -871,13 +871,14 @@
     \item \marginnote{2/1:}Esters bonded to the diene/dienophile through their single oxygen will be donor groups, but worse than groups like \ce{OMe}.
     \begin{itemize}
         \item This is because they \emph{can} push electrons toward the diene/dienophile, but they also have the option to withdraw electrons through resonance.
+        \item This effect is enough to strongly deactivate a dienophile.
     \end{itemize}
     \item Substituents that aren't on the double bond count as alkyl groups. Their inductive effect will vary based on other groups further down the chain, but they will have no resonance effects.
     \item When you have two groups on the diene in the "B" position, the diene will \emph{never} be viable.
     \item He is going to ask us to use the reactions from last quarter, but not know the mechanisms.
     \begin{itemize}
         \item Write "magic powder" over your arrow if you forget the reagents.
-        \item Alkene reactions to know: hydrogenation (\ce{H2} \ce{Pd}/\ce{C}), dihydroxylation (\ce{OsO4}), ozonolysis (\ce{O3} DMSO), hydrobromination (\ce{HBr}), and bromination (\ce{Br2}).
+        \item Alkene reactions to know: hydrogenation (\ce{H2} \ce{Pd}/\ce{C}), dihydroxylation (\ce{OsO4}), ozonolysis (\ce{O3} \ce{Me2S}), hydrobromination (\ce{HBr}), and bromination (\ce{Br2}).
     \end{itemize}
     \item We use both \ce{KO^{$t$}Bu} and \ce{{}^{$t$}BuOH} to establish a buffer, an equilibrium that will allow us to both grab and release a proton.
     \begin{itemize}
@@ -891,6 +892,13 @@
     \end{itemize}
     \item For \ce{{}^13C} NMR, he's not above giving us cyclobutane with a ketone attached.
     \item If you need to form \ce{C-C} bonds, that's probably going to be Diels-Alder for this exam.
+    \item \marginnote{2/2:}PSet 1/2 review takeaways.
+    \begin{itemize}
+        \item $4^\circ$/allylic \ce{{}^13C} peaks are higher than $3^\circ$ peaks.
+        \item When asked how you can distinguish two molecules based on NMR spectra, answer in terms of the number of peaks/shapes of peaks, not the shift of peaks (that's not generally intuitively characteristic of a molecule).
+        \item Beware Diels-Alder products drawn with stereochemistry opposite to the way we've practiced.
+        \item Show the \ce{H-SnBu3} bond homolytically cleaving if necessary.
+    \end{itemize}
 \end{itemize}
 
 
@@ -904,7 +912,7 @@
         \item Breaking \ce{C-H} bonds with lower $DH^\circ$'s leads to more stable radicals.
     \end{itemize}
     \item Unselectivity of chlorination of alkanes.
-    \begin{figure}[h!]
+    \begin{figure}[H]
         \centering
         \footnotesize
         \schemestart
