--- a/Notes/Week3/week3.tex
+++ b/Notes/Week3/week3.tex
@@ -956,6 +956,195 @@
     \item There are also [$2+2$] cycloadditions that require light energy.
     \item "Cyclopentadiene is so reactive, in fact, that on standing at room temperature it slowly undergoes a Diels-Alder reaction with itself" \parencite[602]{bib:SolomonsEtAl}.
 \end{itemize}
+\newpage
+
+
+
+\section{Exam 1 Cheat Sheet}
+\begin{table}[h!]\marginnote{2/3:}
+    \centering
+    \small
+    \renewcommand{\arraystretch}{1.2}
+    \begin{tabular}{|l|l|}
+        \hline
+        \multicolumn{2}{|c|}{\textbf{COMMON ABSORPTIONS}}\\ \hline
+        Aromatic \ce{C-C} & Two peaks usually in the range of $\SIrange{1500}{1600}{\per\centi\meter}$\\ \hline
+        \ce{C=C} & $\sim\SI{1650}{\per\centi\meter}$\\ \hline
+        \ce{C=O} & $\sim\SI{1710}{\per\centi\meter}$ (shifts to $\sim\SI{1735}{\per\centi\meter}$ for esters)\\ \hline
+        \ce{C#C} & $\SIrange{2100}{2300}{\per\centi\meter}$\\ \hline
+        \ce{C#N} & $\SIrange{2100}{2300}{\per\centi\meter}$\\ \hline
+        \ce{C-H} (aldehyde) & Two peaks at $\SI{2170}{\per\centi\meter}$ and $\SI{2810}{\per\centi\meter}$\\ \hline
+        $sp^3$ \ce{C-H} & Just to the right of $\SI{3000}{\per\centi\meter}$\\ \hline
+        $sp^2$ \ce{C-H} & Just to the left of $\SI{3000}{\per\centi\meter}$\\ \hline
+        $sp$ \ce{C-H} & $\sim\SI{3300}{\per\centi\meter}$\\ \hline
+        \ce{N-H} & $\sim\SI{3300}{\per\centi\meter}$ (one peak for \ce{-NH-}, two peaks for \ce{-NH2})\\ \hline
+        \ce{O-H} (alcohol) & $\sim\SI{3400}{\per\centi\meter}$ (a broad, smooth peak)\\ \hline
+        \ce{O-H} (acid) & $\sim\SIrange{2500}{3500}{\per\centi\meter}$ (a very broad, ugly [not smooth] peak)\\ \hline
+    \end{tabular}
+    \caption*{Common IR spectroscopy absorptions.}
+\end{table}
+\begin{table}[h!]
+    \centering
+    \small
+    \renewcommand{\arraystretch}{1.4}
+    \begin{tabular}{|lc|lc|}
+        \hline
+        \rule{0pt}{2em}\textbf{Type of Proton} & \textbf{\shortstack{Chemical Shift\\($\bm{\delta}$, ppm)}} & \textbf{Type of Proton} & \textbf{\shortstack{Chemical Shift\\($\bm{\delta}$, ppm)}}\\
+        $\ang{1}$ Alkyl, {\sf\ce{RC{\color{rex}H}3}} & \numrange{0.8}{1.2} & Alkyl bromide, {\sf\ce{RC{\color{rex}H}2}Br} & \numrange{3.4}{3.6}\\
+        $\ang{2}$ Alkyl, {\sf\ce{RC{\color{rex}H}2R}} & \numrange{1.2}{1.5} & Alkyl chloride, {\sf\ce{RC{\color{rex}H}2}Cl} & \numrange{3.6}{3.8}\\
+        $\ang{3}$ Alkyl, {\sf\ce{R3C{\color{rex}H}}} & \numrange{1.4}{1.8} & Vinylic, {\sf\ce{R2C=C{\color{rex}H}2}} & \numrange{4.6}{5.0}\\
+        Allylic, {\sf\ce{R2C=CR-C{\color{rex}H}3}} & \numrange{1.6}{1.9} & Vinylic, {\sf\ce{R2C=CR{\color{rex}H}}} & \numrange{5.2}{5.7}\\
+        Ketone, {\sf\ce{RCOC{\color{rex}H}3}} & \numrange{2.1}{2.6} & Aromatic, {\sf\ce{Ar{\color{rex}H}}} & \numrange{6.0}{8.5}\\
+        Benzylic, {\sf\ce{ArC{\color{rex}H}3}} & \numrange{2.2}{2.5} & Aldehyde, {\sf\ce{RCO{\color{rex}H}}} & \numrange{9.5}{10.5}\\
+        Acetylenic, {\sf\ce{RC#C{\color{rex}H}}} & \numrange{2.5}{3.1} & Alcohol hydroxyl, {\sf\ce{RO{\color{rex}H}}} & \numrange{0.5}{6.0}\textsuperscript{*}\\
+        Alkyl iodide, {\sf\ce{RC{\color{rex}H}2I}} & \numrange{3.1}{3.3} & Amino, {\sf\ce{R-N{\color{rex}H}2}} & \numrange{1.0}{5.0}\textsuperscript{*}\\
+        Ether, {\sf\ce{ROC{\color{rex}H}2R}} & \numrange{3.3}{3.9} & Phenolic, {\sf\ce{ArO{\color{rex}H}}} & \numrange{4.5}{7.7}\textsuperscript{*}\\
+        Alcohol, {\sf\ce{HOC{\color{rex}H}2R}} & \numrange{3.3}{4.0} & Carboxylic, {\sf\ce{RCOO{\color{rex}H}}} & \numrange{10}{13}\textsuperscript{*}\\
+        \hline
+        \multicolumn{4}{l}{\footnotesize\textsuperscript{*}The chemical shifts of these protons vary in different solvents and with temperature and concentration.}
+    \end{tabular}
+    \caption*{Approximate proton chemical shifts.}
+\end{table}
+\begin{table}[h!]
+    \centering
+    \small
+    \renewcommand{\arraystretch}{1.4}
+    \begin{tabular}{|lc|}
+        \hline
+        \rule{0pt}{2em}\textbf{Type of Carbon} & \textbf{\shortstack{Chemical Shift\\($\bm{\delta}$, ppm)}}\\
+        $\ang{1}$ Alkyl, {\sf\ce{R{\color{rex}C}H3}} & \numrange{0}{40}\\
+        $\ang{2}$ Alkyl, {\sf\ce{R{\color{rex}C}H2R}} & \numrange{10}{50}\\
+        $\ang{3}$ Alkyl, {\sf\ce{R{\color{rex}C}HR2}} & \numrange{15}{50}\\
+        Alkyl halide or amine, {\sf\ce{R3{\color{rex}C}X}} ($\ce{X}=\ce{Cl},\ce{Br},\ce{NR$'$2}$) & \numrange{10}{65}\\
+        Alcohol or ether, {\sf\ce{R3{\color{rex}C}OR$'$}} & \numrange{50}{90}\\
+        Alkyne, {\sf\ce{R{\color{rex}C}#R$'$}} & \numrange{60}{90}\\
+        Alkene, {\sf\ce{R2{\color{rex}C}=R$'$}} & \numrange{100}{170}\\
+        Aryl, {\renewcommand*\printatom[1]{\ensuremath{\mathsf{#1}}}\chemfig[atom sep=1.4em]{[:30]**6(--{\color{rex}C}(-R)----)}} & \numrange{100}{170}\\
+        Nitrile, {\sf\ce{R{\color{rex}C}#N}} & \numrange{120}{130}\\
+        Amide, {\sf\ce{R{\color{rex}C}ONR$'$2}} & \numrange{150}{180}\\
+        Carboxylic acid or ester, {\sf\ce{R{\color{rex}C}OOR$'$}} & \numrange{160}{185}\\
+        Aldehyde or ketone, {\sf\ce{R{\color{rex}C}OR$'$}} & \numrange{182}{215}\\
+        \hline
+    \end{tabular}
+    \caption*{Approximate carbon-13 chemical shifts.}
+\end{table}
+\begin{figure}[h!]
+    \centering
+    \footnotesize
+    \schemestart
+        \chemfig{CH_2=CH-CH_2-R}
+        \arrow{->[ionization][-$\e[-]$]}[,1.4]
+        \chemfig{CH_2-[@{db2},,,,lddbond]CH-[@{sb2a}]CH_2-[@{sb2b}]@{R2}R}
+        \arrow{->[fragmentation]}[,1.8]
+        \chemleft{[}
+            \subscheme{
+                \chemfig{\charge{90={\tiny$+$}}{C}H_2-CH=CH_2}
+                \arrow(.south--.north){<->}[-90]
+                \chemfig{CH_2=CH-\charge{90={\tiny$+$}}{C}H_2}
+            }
+        \chemright{]}
+        \arrow{0}[,0]\+
+        \chemfig{\charge{180=\.}{R}}
+    \schemestop
+    \chemmove{
+        \draw [rex,semithick,shorten <=4pt,shorten >=2pt,arrows={-Stealth[harpoon,swap]}] (db2) to[bend left=60,looseness=1.5] (sb2a);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon]}] (sb2b) to[bend right=60,looseness=1.5] (sb2a);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,flex]}] (sb2b) to[bend left=60,looseness=1.5] (R2);
+    }
+    \caption*{Resonance fragmentation: Alkenes.}
+\end{figure}
+\begin{figure}[h!]
+    \centering
+    \footnotesize
+    \schemestart
+        \chemfig{R-\charge{90=\:}{Z}-CH_2-CH_3}
+        \arrow{->[ionization][-$\e[-]$]}[,1.4]
+        \chemfig{R-@{Z2}\charge{73=\.,107={\tiny$+$}}{Z}-[@{sb2a}]CH_2-[@{sb2b}]@{C2}CH_3}
+        \arrow{->[fragmentation]}[,1.8]
+        \chemleft{[}
+            \subscheme{
+                \chemfig{R-\charge{90={\tiny$+$}}{Z}=CH_2}
+                \arrow(.south--.north){<->}[-90]
+                \chemfig{R-\charge{90=\:}{Z}-\charge{90={\tiny$+$}}{C}H_2}
+            }
+        \chemright{]}
+        \arrow{0}[,0]\+
+        \chemfig{\charge{180=\.}{C}H_3}
+    \schemestop
+    \chemmove{
+        \draw [rex,semithick,shorten <=6pt,shorten >=2pt,arrows={-Stealth[harpoon,swap]}] (Z2) to[bend left=80,looseness=3] (sb2a);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon]}] (sb2b) to[bend right=60,looseness=1.5] (sb2a);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,flex]}] (sb2b) to[bend left=60,looseness=1.5] (C2);
+    }
+    \caption*{Resonance fragmentation: Lone pairs.}
+\end{figure}
+\begin{figure}[h!]
+    \centering
+    \footnotesize
+    \schemestart
+        \chemfig{C(-[:120]R)(-[:-120]R')=\charge{[extra sep=1.5pt]45=\:,-45=\:}{O}}
+        \arrow{->[ionization][-$\e[-]$]}[,1.4]
+        \chemfig{C(-[@{sb2}:120]@{R2}R)(-[:-120]R')=[@{db2}]@{O2}\charge{107=\.,73={\tiny$+$},0=\:}{O}}
+        \arrow{->[fragmentation]}[,1.8]
+        \chemname{
+            \chemleft{[}
+                \subscheme{
+                    \chemfig{R'-C~\charge{90={\tiny$+$},0=\:}{O}}
+                    \arrow(.south--.north){<->}[-90]
+                    \chemfig{R'-\charge{90={\tiny$+$}}{C}=\charge{[extra sep=1.5pt]45=\:,-45=\:}{O}}
+                }
+            \chemright{]}
+        }{Acylium ion}
+        \arrow{0}[,0]\+
+        \chemfig{\charge{0=\.}{R}}
+    \schemestop
+    \chemmove{
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,swap,flex]}] (sb2) to[bend right=60,looseness=1.5] (R2);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon,swap]}] (sb2) to[bend left=50,looseness=1.3] (db2);
+        \draw [rex,semithick,shorten <=6pt,shorten >=2pt,arrows={-Stealth[harpoon,flex]}] (O2) to[bend right=70,looseness=2.5] (db2);
+    }
+    \caption*{Resonance fragmentation: Carbonyls.}
+\end{figure}
+\begin{figure}[h!]
+    \centering
+    \footnotesize
+    \schemestart
+        \chemfig{R-CH(-[@{sb1a}2]H)-[@{sb1b}]CH_2-[@{sb1c,0.2}2]@{O1}\charge{90=\:,163={\tiny$+$},197=\.}{O}H}
+        \arrow(.-18--)
+        \chemleft{[}
+            \chemfig{R-CH-[,,,,lddbond]CH_2}
+        \chemright{]^+}
+        \+
+        \chemfig{H-\charge{90=\:,-90=\:}{O}-H}
+    \schemestop
+    \chemmove{
+        \draw [rex,semithick,shorten <=2pt,shorten >=6pt,arrows={-Stealth[harpoon]}] (sb1a) to[out=135,in=150,out looseness=3] (O1);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt,arrows={-Stealth[harpoon]}] (sb1a) to[bend left=60,looseness=1.5] (sb1b);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb1c) to[out=30,in=-60,looseness=1.5] (O1);
+    }
+    \caption*{Fragmentation: Loss of \ce{H2O}.}
+\end{figure}
+\begin{figure}[h!]
+    \centering
+    \footnotesize
+    \schemestart
+        \chemfig{Y-[:30]C(=[@{db1}2]\charge{[extra sep=1.5pt]45=\:,118:1pt={\tiny$+$},152=\.}{O})-[@{sb1a}:-30]\chembelow{C}{\hspace{5pt}H_2}-[@{sb1b}:30]CH_2-[@{sb1c}2]CH(-[@{sb1d}:150]@{H1}H)-[:30,,1]R}
+        \arrow
+        \chemfig{Y-[:30]C(-[2]\charge{90=\:,197={\tiny$+$},163=\.}{O}-[:30]H)=[:-30]CH_2}
+        \arrow{0}[,0]\+{1em,1em,2em}
+        \chemfig{CH_2=[2]CH-[:30,,1]R}
+    \schemestop
+    \chemmove{
+        \draw [rex,semithick,shorten <=3pt,shorten >=2pt] (db1) to[bend right=50,looseness=1.4] (H1);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb1b) to[bend right=60,looseness=1.5] (sb1a);
+        \draw [rex,semithick,shorten <=2pt,shorten >=2pt] (sb1d) to[bend right=60,looseness=1.5] (sb1c);
+    }
+    \vspace{1em}
+    \caption*{Fragmentation: McLafferty rearrangement.}
+\end{figure}
+\begin{itemize}
+    \item Alkene reactions to know: hydrogenation (\ce{H2} \ce{Pd}/\ce{C}), dihydroxylation (\ce{OsO4}), ozonolysis (\ce{O3} \ce{Me2S}), hydrobromination (\ce{HBr}), and bromination (\ce{Br2}).
+\end{itemize}
 
 
 
