--- a/main.bib
+++ b/main.bib
@@ -26,3 +26,13 @@
     url       = {https://sdbs.db.aist.go.jp/sdbs/cgi-bin/landingpage?sdbsno=2109},
     urldate   = {2022-01-27}
 }
+
+@article{bib:WrittenAssignment3,
+    author    = {Ishay Columbus and Silvio E Biali},
+    title     = {The Nucleophilic Substitution Route. A Facile Method for the Fourfold Functionalization of the Methylene Bridges of Calix[4]arene},
+    journaltitle = {Org. Lett.},
+    volume    = {9},
+    number    = {15},
+    year      = {2007},
+    pages     = {2927-2929},
+}
