--- a/main.bib
+++ b/main.bib
@@ -36,3 +36,11 @@
     year      = {2007},
     pages     = {2927-2929},
 }
+
+@online{bib:CHEM20100Notes,
+    author    = {Steven Labalme},
+    title     = {{CHEM 20100 (Inorganic Chemistry I)} Notes},
+    year      = {2022},
+    url       = {https://github.com/shadypuck/CHEM20100Notes/blob/master/Notes/notes.pdf},
+    urldate   = {2022-02-16}
+}
