--- a/preamble.tex
+++ b/preamble.tex
@@ -38,6 +38,7 @@
 \colorlet{gax}{gray!50}
 \colorlet{orx}{orange!90!yellow!95!black!90}
 \colorlet{blx}{cyan}
+\colorlet{grx}{green!60!cyan}
 
 \sisetup{range-phrase=-,range-units=single}
 \DeclareSIUnit{\calorie}{cal}
@@ -63,6 +64,7 @@
     rddbond/.style={decorate,decoration={ddbond,mirror}}
 }
 
+\newcommand{\N}{\mathbb{N}}
 \newcommand{\e}[1][]{\text{e}^{#1}}
 
 \usepackage{subfiles}
