--- a/Notes/Week5/week5.tex
+++ b/Notes/Week5/week5.tex
@@ -750,5 +750,89 @@
 
 
 
+\section{Chapter 14: Aromatic Compounds}
+\emph{From \textcite{bib:SolomonsEtAl}.}
+\begin{itemize}
+    \item \marginnote{2/16:}Nomenclature.
+    \begin{itemize}
+        \item "In many simple compounds, \emph{benzene} is the parent name and the substituent is simply indicated by a prefix" \parencite[619]{bib:SolomonsEtAl}.
+        \begin{itemize}
+            \item Examples: Flurorbenzene, chlorobenzene, nitrobenzene.
+        \end{itemize}
+        \item Other simple compounds have commonly accepted parent names.
+        \begin{itemize}
+            \item Examples: Methylbenzene $\to$ toluene, hydroxybenzene $\to$ phenol, aminobenzene $\to$ aniline.
+            \item Other compounds to be aware of: Benzenesulfonic acid (\ce{C6H5SO3H}), benzoic acid (\ce{C6H5COOH}), acetophenone (\ce{C6H5COCH3}), and anisole (\ce{C6H5OCH3}).
+        \end{itemize}
+        \item Covers ortho, meta, para naming.
+        \item "When a substituent is one that together with the benzene ring gives a new base name, that substituent is assumed to be in position 1 and the new parent name is used" \parencite[620]{bib:SolomonsEtAl}.
+        \begin{itemize}
+            \item This means that molecules such as m-nitrobenzoic acid are named 3-nitrobenzoic acid.
+        \end{itemize}
+        \item Dimethylbenzenes are often known as xylenes.
+        \item Phenylmethyl becomes benzyl.
+    \end{itemize}
+    \item The only alkene chemistry in which benzene participates is hydrogenation (in the presence of finely divided nickel, under high temperatures and pressures).
+    \item \textbf{Benzene substitution}: The substitution of one of the hydrogens of benzene for a bromine, as initiated by the presence of a Lewis acid catalyst such as ferric bromide (\ce{FeBr3}).
+    \begin{itemize}
+        \item Explanation: All hydrogens are equivalent and replacing any one of them with bromine results in the same product.
+        \item Possible explanation: Only one of benzene's hydrogens is reactive.
+        \begin{itemize}
+            \item Wrong, though --- ruled out by the structure of benzene but plausible when we didn't know its structure.
+        \end{itemize}
+    \end{itemize}
+    \item The Kekul\'{e} structure for benzene (cyclohexatriene) satisfied the requirements but failed for the reason of Figure \ref{fig:brominationCyclohexatriene}.
+    \begin{itemize}
+        \item Kekul\'{e} proposed a rapid equilibrium between the structures (resonance), but today we prefer the explanation of delocalization.
+    \end{itemize}
+    \item A new meaning of aromaticity: Aromatic compounds are highly unsaturated compounds that prefer substitution chemistry to addition chemistry.
+    \item Richard Willst\"{a}tter first synthesized cyclooctatetraene in 1911.
+    \item \textbf{Resonance energy}: The difference between the amount of heat actually released and that calculated on the basis of the Kekul\'{e} structure.
+    \item "Resonance contributors, we emphasize again, are not in equilibrium. They are not structures of real molecules. They are the closest we can get if we are bound by simple rules of valence, but they are very useful in helping us visualize the actual molecule as a hybrid" \parencite[625]{bib:SolomonsEtAl}.
+    \item It was recently discovered that "crystalline benzene involves perpendicular interactions between benzene rings, so that the relatively positive periphery of one molecule associates with the relatively negative faces of the benzene molecules aligned above and below it" \parencite[627]{bib:SolomonsEtAl}.
+    \item In 1931, Erich H\"{u}ckel carried out a series of quantum mechanical calculations that concluded that planar monocyclic rings containing $4n+2$ $\pi$-electrons have \textbf{closed shells} of delocalized electrons (like benzene) and therefore have substantial resonance energies.
+    \item \textbf{Closed shell}: A set of molecular orbitals that are all either completely occupied or completely empty (i.e., no MO in the set contains only one electron).
+    \begin{itemize}
+        \item Molecules that lack closed shells have unpaired electrons (radicals) and are usually not stable.
+    \end{itemize}
+    \item The \textbf{polygon-and-circle method} was developed by C. A. Coulson of Oxford university as a simple method of deriving the same energy levels that the quantum mechanical calculations of H\"{u}ckel would furnish.
+    \item \textbf{Polygon-and-circle method}: The following procedure.
+    \begin{enumerate}
+        \item We start by drawing a polygon corresponding to the number of carbons in the ring, placing a corner of the polygon at the bottom.
+        \item Next, we surround the polygon with a circle that touches each corner of the polygon (the circumcircle).
+        \item At the points where the polygon touches the circle, we draw short horizontal lines outside the circle. The height of each line represents the relative energy of each $\pi$ molecular orbital.
+        \item Next, we draw a dashed horizontal line across and halfway up the circle. The energies of bonding $\pi$ molecular orbitals are below this line. The energies of antibonding $\pi$ molecular orbitals are above, and those for nonbonding orbitals are at the level of the dashed line.
+        \item Based on the number of $\pi$ electrons in the ring, we then place electron arrows on the lines corresponding to the respective orbitals, beginning at the lowest energy level and working upward. In doing so, we fill degenerate orbitals each with one electron first, then add to each unpaired electron another with opposite spin if it is available.
+    \end{enumerate}
+    \item \textbf{Annulene}: A monocyclic compound that can be represented by a structure having alternating single and double bonds.
+    \begin{itemize}
+        \item The ring size of an annulene is indicated by a number in brackets.
+        \item For example, benzene is [6]annulene and cyclooctatetraene is [8]annulene.
+    \end{itemize}
+    \item H\"{u}ckel's rule predicts that annulenes are aromatic iff they have $4n+2$ $\pi$-electrons.
+    \begin{itemize}
+        \item This prediction was verified in the 1960s (largely by F. Sondheimer) as numerous new annulenes became available for testing.
+        \item Annulenes 14-24 satisfy H\"{u}ckel's prediction.
+        \item Annulenes 10-12 are too strained to be planar, regardless of double bond placement (see Figure \ref{fig:specialConsiderationsb}).
+    \end{itemize}
+    \item The \ce{{}^1H} NMR spectrum of benzene supports both equivalent hydrogens (only a singlet appears) and the cyclic nature of the $\pi$-system (the high chemical shift is indicative of a ring current).
+    \begin{itemize}
+        \item {}[18]annulene has six hydrogens within its ring and twelve hydrogens at the periphery. Because of the shape of the ring current, the internal hydrogens are highly shielded ($\delta\ -3.0$) and the external hydrogens are highly deshielded ($\delta\ 9.3$).
+        \item NMR spectroscopy provides direct physical evidence of whether or not the $\pi$-electrons are delocalized.
+    \end{itemize}
+    \item Cycloheptatriene is also commonly known as tropylidene.
+    \item To evaluate the stabilization (or lack thereof) of a cyclic compound with delocalized $\pi$ electrons, we compare it to a conjugated linear model and consider what would happen (theoretically or experimentally) if we removed a hydrogen from each end of the linear compound to form a ring.
+    \begin{itemize}
+        \item Such calculations/experiments are beyond the scope of \textcite{bib:SolomonsEtAl}.
+    \end{itemize}
+    \item \textbf{Benzenoid polycyclic aromatic hydrocarbon}: A molecule having two or more benzene rings fused together.
+    \item \textbf{Nonbenzenoid aromatic compound}: A compound that is either the cyclopentadienyl anion, the cycloheptatrienyl cation, \emph{trans}-15,16-dimethyldihydropyrene, or an aromatic annulene (except [6]annulene).
+    \item \textcite{bib:SolomonsEtAl} briefly discusses fullerenes, such as buckyballs.
+    \item \textcite{bib:SolomonsEtAl} discusses applications of aromatic compounds to biochemistry. In particular, it discusses NADH and \ce{NAD+}.
+    \item Discusses the infrared absorptions of aromatic compounds (not covered in class, but potentially relevant?).
+\end{itemize}
+
+
+
 
 \end{document}
