--- a/preamble.tex
+++ b/preamble.tex
@@ -8,6 +8,7 @@
 \usepackage[bottom]{footmisc}
 \usepackage[style=chem-acs]{biblatex}
 \usepackage{float,subcaption}
+\usepackage{array,longtable}
 \usepackage{graphicx}
 \usepackage{tikz}
 \usepackage{siunitx}
